Basic working version with stylesheet

--- a/public/quotidien/src/server/views/date.html
+++ b/public/quotidien/src/server/views/date.html
@@ -3,27 +3,41 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello there!</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <title><%= moment(data[0].date).format("dddd D MMMM YYYY") %></title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script>
+    <script>WebFont.load({google:{families:["Source+Sans+Pro:400,400italic,600,600italic"]}});</script>
   </head>
   <body>
 
-    <h1><%= moment(data[0].date).format("DD") %></h1>
-    <ul>
+    <div class="main">
+      <h1><%= moment(data[0].date).format("dddd D MMMM YYYY") %></h1>
+
       <% _.forEach(data, function (d) { %>
-        <li>
-          <%= d.titre %>
-          <%= d.date %>
-          <strong><%= d.tickets.compte %></strong>
-          <ul>
+      <div class="seance">
+        <table>
+          <tr>
+            <td colspan="2" class="seance-header">
+              <span class="date"><%= moment(d.date).format("ddd D MMM HH[h]mm") %></span>
+                <span class="salle"> / Salle <%= d.salle.code %></span>
+            </td>
+          </tr>
+          <tr>
+            <td class="right bold"><%= d.titre %></td>
+            <td class="right bold"><%= d.tickets.compte %></td>
+          </tr>
           <% _.forEach(d.tickets.tarifCat2, function (v) { %>
-          <li>
-            <%= v[0] %> : <%= v[1] %>
-          </li>
+          <tr>
+            <td class="right"><%= v[0] %></td>
+            <td class="right"><%= v[1] %></td>
+          </tr>
           <% }); %>
-        </ul>
-        </li>
-      <% }); %>
-    </ul>
+        </table>
+      </div>
+    <% }); %>
+    </div>
+  
+
 
   </body>
 </html>
